<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@+id/sample_content_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="24dp"
            android:id="@+id/text_id"
            android:text="@string/start_txt" />
</LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:gravity="center"
            android:orientation="horizontal">


            <Button
                android:id="@+id/game_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_game"
                android:theme="@style/MyButton"/>

            <Button
                android:id="@+id/exit_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exit_game"
                android:theme="@style/MyButton"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:gravity="center"
        android:orientation="horizontal">

        <GridView
            android:id="@+id/grid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:horizontalSpacing="10dp"
            android:numColumns="3"

            android:verticalSpacing="10dp" />


    </LinearLayout>
</LinearLayout>
</FrameLayout>






