<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05"
        android:orientation="horizontal"
      >
    <TextView
        android:id="@+id/text_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/start_txt_naval"
        android:textSize="24dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:gravity="center"
        android:orientation="horizontal">


        <Button
            android:id="@+id/start"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_game"
            android:theme="@style/MyButton"/>
        <Button
            android:id="@+id/ready"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ready"
            android:theme="@style/MyButton"/>

        <Button
            android:id="@+id/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit_game"
            android:theme="@style/MyButton"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:orientation="horizontal">


        <GridView
            android:padding="3dp"
            android:id="@+id/your_board"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:background="@color/colorPrimary"
            android:horizontalSpacing="0dp"
            android:verticalSpacing="5dp"
           ></GridView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1(x3)"
                android:id="@+id/first"
                android:theme="@style/MyButton"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2(x2)"
                android:id="@+id/second"
                android:theme="@style/MyButton"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3(x1)"
                android:id="@+id/third"
                android:theme="@style/MyButton"/>


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/black"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:orientation="horizontal">

        <GridView
            android:padding="3dp"
            android:id="@+id/rival_board"
            android:layout_width="0dp"
            android:layout_weight="0.8"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:horizontalSpacing="0dp"
            android:verticalSpacing="5dp"
           ></GridView>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="wrap_content"
            android:orientation="vertical"></LinearLayout>

    </LinearLayout>


</LinearLayout>